	PR gas/10704 	* symbols.c (snapshot_symbol): Revert 2006-01-09 patch for PR2117.